fix: hide tabbar scrollbar by setting width/height to 0
The no-scrollbar utility's display:none wasn't fully overriding the
global scrollbar styles that set width/height to 8px. Adding explicit
width:0 and height:0 ensures the scrollbar is completely hidden in
WebKit browsers.

--- a/src/index.css
+++ b/src/index.css
@@ -308,6 +308,8 @@
 
   &::-webkit-scrollbar {
     display: none;
+    width: 0;
+    height: 0;
   }
 }
 
@@ -317,6 +319,8 @@
 
   &::-webkit-scrollbar {
     display: none;
+    width: 0;
+    height: 0;
   }
 }
 
